# part2

./: AStar.cpp  AStar.h  BFS.h  BestFirstSearch.h  CMakeLists.txt  CachManager.h  CacheManager.h  ClientHandler.cpp  ClientHandler.h  CompareCost.cpp  CompareCost.h  DFS.h  FileCacheManager.cpp  FileCacheManager.h  ISearchable.h  Isearchable.cpp  Isearcher.cpp  Isearcher.h  Matrix.h  MatrixProblem.h  MatrixSolverBestFS.h  MyClientHandler.cpp  MyClientHandler.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  PrioritySearcher.h  Problem.h  QueueSearcher.h  README.md  Server.h  Solution.h  Solver.h  StackSearcher.h  State.cpp  State.h  StringReverser.h  clientHandler.h  main.cpp  (+6 more)
